Change emprendimiento to get info from API 2

--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -344,7 +344,7 @@
           </div>
         </div>
 
-        {% if emprendimiento.category_id != "None" %}
+        {% if emprendimiento.category_id != "" %}
         <div class="row py-3">
           <div class="col-lg-3 py-2">
             <h4>Opiniones de usuarios</h4>
