--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -325,7 +325,7 @@
               <span>{{emprendimiento.contact_phone_number}}</span>
             </div>
 
-            {% if emprendimiento.categoria == "None" %}
+            {% if emprendimiento.category_id == "" %}
             <div class="my-4 bg-primary p-3 text-light">
               <p>
                 Este emprendimiento aún no ha sido categorizado. Ayúdanos a
