--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -315,13 +315,17 @@
             <div class="my-2">{{emprendimiento.biography}}</div>
             <div class="my-3">
               <i class="bi bi-instagram starIcon h4 mx-2"></i>
-              <a href="https://www.instagram.com/{{emprendimiento.username}}/"
+              <a
+                href="https://www.instagram.com/{{emprendimiento.username}}/"
+                target="_blank"
                 >{{emprendimiento.username}}</a
               >
             </div>
             <div class="my-3">
               <i class="bi bi-people-fill starIcon h4 mx-2"></i>
-              <span>{{emprendimiento.follower_count}} seguidores</span>
+              <span
+                >{{","|format(emprendimiento.follower_count)}} seguidores</span
+              >
             </div>
 
             {% if emprendimiento.contact_phone_number != None %}
@@ -333,24 +337,34 @@
             <div class="my-3">
               <i class="bi bi-globe starIcon h4 mx-2"></i>
               <span
-                ><a href="{{emprendimiento.external_url}}">Sitio web</a></span>
-                </div>
-                {% endif %} {% if emprendimiento.category_name != None %}
-                <div class="my-3">
-                    <i class="bi bi-tag starIcon h4 mx-2"></i>
-                    <span>{{emprendimiento.category_name}}</span>
-                </div>
-                {% endif %} {% if emprendimiento.public_email != None %}
-                <div class="my-3">
-                    <i class="bi bi-envelope starIcon h4 mx-2"></i>
-                    <span>{{emprendimiento.public_email}}</span>
-                </div>
-                {% endif %} {% if emprendimiento.category_id == "" %}
-                <div class="my-4 bg-primary p-3 text-light">
-                    <p>
-                        Este emprendimiento aún no ha sido categorizado. Ayúdanos a clasificarlo y que forme parte de la comunidad de EmprendeAdvisor
-                    </p>
-                    <a class="btn btn-altprimary" href="#" data-bs-toggle="modal" data-bs-target="#clasificar">Clasificar</a
+                ><a href="{{emprendimiento.external_url}}" target="_blank"
+                  >Sitio web</a
+                ></span
+              >
+            </div>
+            {% endif %} {% if emprendimiento.category_name != None %}
+            <div class="my-3">
+              <i class="bi bi-tag starIcon h4 mx-2"></i>
+              <span>{{emprendimiento.category_name}}</span>
+            </div>
+            {% endif %} {% if emprendimiento.public_email != None %}
+            <div class="my-3">
+              <i class="bi bi-envelope starIcon h4 mx-2"></i>
+              <span>{{emprendimiento.public_email}}</span>
+            </div>
+            {% endif %} {% if emprendimiento.category_id == "" %}
+            <div class="my-4 bg-primary p-3 text-light">
+              <p>
+                Este emprendimiento aún no ha sido categorizado. Ayúdanos a
+                clasificarlo y que forme parte de la comunidad de
+                EmprendeAdvisor
+              </p>
+              <a
+                class="btn btn-altprimary"
+                href="#"
+                data-bs-toggle="modal"
+                data-bs-target="#clasificar"
+                >Clasificar</a
               >
             </div>
             {% endif %}
@@ -373,10 +387,10 @@
             <div class="d-flex flex-column">
               <div class="d-flex align-items-center my-2">
                 <a class="" style="min-width: 90px">5 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <a class="" style="cursor: pointer">67%</a>
+                <div class="progress flex-grow-1 mx-2">
+                    <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <a class="" style="cursor: pointer">67%</a>
                 </div>
                 <div class="d-flex align-items-center my-2">
                     <a class="" style="min-width: 90px">4 estrellas</a>
