--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -324,7 +324,7 @@
             <div class="my-3">
               <i class="bi bi-people-fill starIcon h4 mx-2"></i>
               <span
-                >{{ "${:,}".format(emprendimiento.follower_count) }}
+                >{{ "{:,}".format(emprendimiento.follower_count) }}
                 seguidores</span
               >
             </div>
