Error if users does not exists 2

--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -269,7 +269,7 @@
       </div>
     </nav>
     <section class="container-fluid catologoBx">
-      {% if error = true %}
+      {% if error == true %}
       <div class="container">
         <div class="row my3 border-bottom border-1 border-dark">
           <div class="my-4 bg-primary p-3 text-light">
