Configure search form 3

--- a/flask_app/templates/admin.html
+++ b/flask_app/templates/admin.html
@@ -234,9 +234,9 @@
         </div>
         </li>
         </ul>
-        <form class="d-flex ms-auto mt-3 mt-lg-0">
+        <form class="d-flex ms-auto mt-3 mt-lg-0" action="/search" method="post">
             <div class="input-group">
-                <input class="form-control border-0 mr-2" type="search" placeholder="Buscar" aria-label="Search" />
+                <input class="form-control border-0 mr-2" type="search" placeholder="@usuario_instagram" name="search" aria-label="Search" />
                 <button class="btn btn-sm btn-primary border-0 text-light" type="submit">
                 Buscar
               </button>
