--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -234,7 +234,7 @@
         </div>
         </li>
         </ul>
-        <form class="d-flex ms-auto mt-3 mt-lg-0" action="/search" method="post">
+        <form class="d-flex ms-auto mt-3 mt-lg-0" id="searchForm">
             <div class="input-group">
                 <input class="form-control border-0 mr-2" type="search" placeholder="@usuario_instagram" name="search" aria-label="Search" />
                 <button class="btn btn-sm btn-primary border-0 text-light" type="submit">
