--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -56,211 +56,83 @@
                 <div class="mega-content px-4">
                   <div class="container-fluid">
                     <div class="d-flex flex-wrap p-3">
+                      {% if categoriesList != False %} {% for category in
+                      categoriesList %}
                       <ul class="categoryBx">
                         <li>
                           <a
                             class="text-decoration-none text-altprimary h5"
-                            href=""
-                            >Celulares</a
+                            href="/emprendimientos/category/{{category.id}}"
+                            >{{category.name}}</a
                           >
                         </li>
                         <ul class="mt-3">
+                          {% for subcategory in category.subcategories %}
                           <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                </li>
-                <li>
-                    <a class="text-reset" href="#">Cargadores</a>
-                </li>
-                <li>
-                    <a class="text-reset" href="#">Baterias</a>
-                </li>
-                <li>
-                    <a class="text-reset" href="#">Inalambricos</a>
-                </li>
-                <li>
-                    <a class="text-reset" href="#">Cargadores</a>
-                </li>
-                <li>
-                    <a class="text-reset" href="#">Baterias</a>
-                </li>
-                <li>
-                    <a class="text-reset" href="#">Inalambricos</a>
-                </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-                <ul class="categoryBx">
-                    <li>
-                        <a class="text-decoration-none text-altprimary h5" href="">Celulares</a
-                          >
-                        </li>
-                        <ul class="mt-3">
-                          <li>
-                            <a class="text-reset" href="#">Carcasas</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Cargadores</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Baterias</a>
-                    </li>
-                    <li>
-                        <a class="text-reset" href="#">Inalambricos</a>
-                    </li>
-                </ul>
-                </ul>
-        </div>
-        </div>
-        </div>
-        </div>
-        </li>
-        </ul>
-        <form class="d-flex ms-auto mt-3 mt-lg-0" id="searchForm">
+                            <a
+                              class="text-reset"
+                              href="/emprendimientos/subcategory/{{subcategory.id}}"
+                              >{{subcategory.name}}</a
+                            >
+                          </li>
+                          {% endfor %}
+                        </ul>
+                      </ul>
+                      {% endfor %} {% endif %}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <form class="d-flex ms-auto mt-3 mt-lg-0" id="searchForm">
             <div class="input-group">
-                <input class="form-control border-0 mr-2" type="search" placeholder="@usuario_instagram" name="search" aria-label="Search" />
-                <button class="btn btn-sm btn-primary border-0 text-light" type="submit">
+              <input
+                class="form-control border-0 mr-2"
+                type="search"
+                placeholder="@usuario_instagram"
+                name="search"
+                aria-label="Search"
+              />
+              <button
+                class="btn btn-sm btn-primary border-0 text-light"
+                type="submit"
+              >
                 Buscar
               </button>
             </div>
-        </form>
-        <ul class="navbar-nav my-2 my-lg-0 ms-auto">
+          </form>
+          <ul class="navbar-nav my-2 my-lg-0 ms-auto">
             {% if userSession != "" %}
-            <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
-                <div class="dropdown d-flex flex-column align-items-center my-2 my-lg-0">
-                    <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li
+              class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center"
+            >
+              <div
+                class="dropdown d-flex flex-column align-items-center my-2 my-lg-0"
+              >
+                <a
+                  class="btn btn-sm btn-secondary dropdown-toggle"
+                  href="#"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-bs-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
                   Mi cuenta
                 </a>
 
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        {% if session["level"] != 9 %}
-                        <a class="dropdown-item" href="/cuenta">Configurar</a> {% else %} <a class="dropdown-item" href="/admin">Admin</a> {% endif %}
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/logout">Cerrar Sesión</a>
-                    </div>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    {% if session["level"] != 9 %}
+                    <a class="dropdown-item" href="/cuenta">Configurar</a> {% else %} <a class="dropdown-item" href="/admin">Admin</a> {% endif %}
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/logout">Cerrar Sesión</a>
                 </div>
-            </li>
-            {% else %}
-            <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
-                <a class="btn btn-sm btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#login">Ingrese</a
+        </div>
+        </li>
+        {% else %}
+        <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
+            <a class="btn btn-sm btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#login">Ingrese</a
               >
             </li>
             {% endif %}
@@ -413,42 +285,42 @@
             <div class="d-flex flex-column">
               <div class="d-flex align-items-center my-2">
                 <a class="" style="min-width: 90px">5 estrellas</a>
+            <div class="progress flex-grow-1 mx-2">
+                <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <a class="" style="cursor: pointer">67%</a>
+            </div>
+            <div class="d-flex align-items-center my-2">
+                <a class="" style="min-width: 90px">4 estrellas</a>
                 <div class="progress flex-grow-1 mx-2">
-                    <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 14%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <a class="" style="cursor: pointer">67%</a>
+                <a class="" style="cursor: pointer">14%</a>
+            </div>
+            <div class="d-flex align-items-center my-2">
+                <a class="" style="min-width: 90px">3 estrellas</a>
+                <div class="progress flex-grow-1 mx-2">
+                    <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">4 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 14%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <a class="" style="cursor: pointer">14%</a>
+                <a class="" style="cursor: pointer">5%</a>
+            </div>
+            <div class="d-flex align-items-center my-2">
+                <a class="" style="min-width: 90px">2 estrellas</a>
+                <div class="progress flex-grow-1 mx-2">
+                    <div class="progress-bar" role="progressbar" style="width: 6%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">3 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <a class="" style="cursor: pointer">5%</a>
+                <a class="" style="cursor: pointer">6%</a>
+            </div>
+            <div class="d-flex align-items-center my-2">
+                <a class="" style="min-width: 90px">1 estrellas</a>
+                <div class="progress flex-grow-1 mx-2">
+                    <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">2 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 6%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <a class="" style="cursor: pointer">6%</a>
-                </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">1 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <a class="" style="cursor: pointer">7%</a>
-                </div>
-                </div>
-                {% if userSession != "" %}
-                <a class="btn btn-altprimary text-light w-100 my-3" href="#" data-bs-toggle="modal" data-bs-target="#review">Escribir mi opinión</a
+                <a class="" style="cursor: pointer">7%</a>
+            </div>
+            </div>
+            {% if userSession != "" %}
+            <a class="btn btn-altprimary text-light w-100 my-3" href="#" data-bs-toggle="modal" data-bs-target="#review">Escribir mi opinión</a
             >
             {% else %}
             <a
@@ -509,7 +381,7 @@
                 <a class="btn btn-tertiary text-dark px-4" href="#"
                   >Útil <i class="bi bi-hand-thumbs-up starIcon"></i
                 ></a>
-                <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report">Informar de un abuso</a
+            <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report">Informar de un abuso</a
                 >
               </div>
             </div>
@@ -565,7 +437,7 @@
                 <a class="btn btn-tertiary text-dark px-4" href="#"
                   >Útil <i class="bi bi-hand-thumbs-up starIcon"></i
                 ></a>
-                <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report">Informar de un abuso</a
+            <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report">Informar de un abuso</a
                 >
               </div>
             </div>
