--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <h3 class="text-dark mb-0">
-                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Advisor</span></a
+                <a class="text-reset text-decoration-none" href="/dashboard">Emprende<span class="text-tertiary">Advisor</span></a
           >
         </h3>
         <button
@@ -154,8 +154,8 @@
         {% if emprendimiento.category_id != "" %}
         <div class="row my-3">
           <div class="col-12">
-            <span>Celulares</span><span class="mx-3">></span
-            ><span>Cargadores</span>
+            <span>{{emprendimiento.categoria}}</span><span class="mx-3">></span
+            ><span>{{emprendimiento.subcategoria}}</span>
           </div>
         </div>
         {% endif %} {% if emprendimiento.is_private %}
@@ -193,15 +193,17 @@
               class="mt-3 d-flex justify-content-between align-items-center text-yellowstar"
             >
               <span class="h6 d-flex flex-column flex-lg-row">
-                <span
-                  ><i class="bi bi-star-fill mx-1 starIcon"></i
-                  ><i class="bi bi-star-fill mx-1 starIcon"></i
-                  ><i class="bi bi-star-fill mx-1 starIcon"></i
-                  ><i class="bi bi-star-fill mx-1 starIcon"></i
-                  ><i class="bi bi-star-fill mx-1 starIcon"></i
-                ></span>
+                <span>
+                  {% set stars = emprendimiento.promedio|round|int %} {% set
+                  remain = 5 - stars %} {% for n in range(stars) %}
+                  <i class="bi bi-star-fill mx-1 starIcon"></i> {% endfor %} {%
+                  for n in range(remain) %}
+                  <i class="bi bi-star mx-1 starIcon"></i> {% endfor %}
+                </span>
                 <span class="my-2 my-lg-0 mx-lg-2 text-dark"
-                  >(45 calificaciones)</span
+                  >{% if emprendimiento.cuenta == 0 %} Sin calificar {% elif
+                  emprendimiento.cuenta == 1 %} (1 calificación) {% else %}
+                  ({{emprendimiento.cuenta}} calificaciones) {% endif %}</span
                 >
               </span>
               <span class="h5"
