--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <h3 class="text-dark mb-0">
-                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Advisor</span></a
+                <a class="text-reset text-decoration-none" href="/dashboard">Emprende<span class="text-tertiary">Advisor</span></a
           >
         </h3>
         <button
@@ -309,7 +309,7 @@
                   >
                     <img
                       class="img-fluid"
-                      src="http://127.0.0.1/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
+                      src="https://www.emprendeadvisor.com/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
                       alt=""
                     />
                   </a>
