--- a/flask_app/templates/politica.html
+++ b/flask_app/templates/politica.html
@@ -238,7 +238,7 @@
                   <strong>Website</strong> refers to EmprendeAdvisor, accessible
                   from
                   <a
-                    href="http://127.0.0.1"
+                    href="https://www.emprendeadvisor.com"
                     rel="external nofollow noopener"
                     target="_blank"
                     >emprendeadvisor.com</a
