--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -181,7 +181,7 @@
           <div class="col-lg-4 p-4 text-center">
             <img
               class="img-fluid"
-              src="http://127.0.0.1/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
+              src="https://www.emprendeadvisor.com/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
               alt=""
             />
           </div>
