--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -309,7 +309,7 @@
                   >
                     <img
                       class="img-fluid"
-                      src="https://www.emprendeadvisor.com/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
+                      src="http://18.205.29.39:5001/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
                       alt=""
                     />
                   </a>
